# Z3Light

./: .cproject  .ewp.ewp  .ewp.ipcf  .project  .projectlinkstore  Z3Light_768_test_ota2.pintool  app.c  app.h  imported_project_report.html  led_user.h  main.c  private_parse.c  private_parse.h  rgb_led.c  vscode.conf
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.3.1.20210824.gcc.slsproj
.uceditor/: .Z3Light_768_5L.debug_swo.cedit  .Z3Light_768_5L.iostream_usartvcom.cedit  .Z3Light_768_5L.pwmpwm0.cedit  .Z3Light_768_5L.pwmpwm1.cedit  .Z3Light_768_5L.pwmpwm2.cedit  .Z3Light_768_5L.simple_buttonbtn1.cedit  .Z3Light_768_5L.simple_buttonbtn2.cedit  .Z3Light_768_5L.simple_buttonbtn3.cedit  .Z3Light_768_5L.simple_ledled0.cedit  .Z3Light_768_5L.simple_ledled1.cedit  .Z3Light_768_5L.simple_rgb_pwm_ledrgb.cedit  .Z3Light_768_5L.sleeptimer.cedit  .Z3Light_768_5L.zigbee_ota_client_policy.cedit  .Z3Light_768_5L.zigbee_time_server.cedit
GNU ARM v10.3.1 - Default/: app.d  main.d  makefile  private_parse.d  rgb_led.d  sources.mk  subdir.mk
_cmake/: .cmake  CMakeLists.txt  CMakePresets.json  toolchain.cmake
autogen/: .crc_config.crc  sl_component_catalog.h  sl_event_handler.c  sl_pwm_init.c  sl_pwm_instances.h  sl_simple_button_instances.c  sl_simple_button_instances.h  zap-config.h  zap-event.h  zap-tokens.h  zigbee_af_cluster_functions.h
config/: pin_config.h  (+6 more)
(+344 files in other folders)
